--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: 'Install dependencies'
-        run: npm install
+        run: npm install --config
       - name: 'Build project'
         run: npm run build
       - name: 'Test project'
